basic functionality including add items, clear items now working

--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
       <div id="productonebox" data-price="25.00">
           <h2>Test Product 1</h2>
           <h3>Price: $25.00</h3>
-          <input id="inputone" type="number" value="0">
+          <input id="inputone" type="number" value="0" min="0">
           <button id="onebutton">Add To Cart</button>
           <button id="clearone">Clear Quantity</button>
 
 
 
       </div>
-      <div id="producttwobox">
+      <div id="producttwobox" data-price="15.00">
         <h2>Test Product 2</h2>
         <h3>Price: $15.00</h3>
-        <input type="number" value=0>
-        <button>Add To Cart</button>
+        <input id="inputtwo" type="number" value=0 min="0">
+        <button id="twobutton">Add To Cart</button>
+        <button id="cleartwo">Clear Quantity</button>
 
 
 
@@ -50,7 +51,7 @@
           <tr id="producttworow">
             
             <td>Test Product 2</td>
-            <td>$25</td>
+            <td>$15</td>
             <td id="twoquantity" value="0"></td> 
             
           </tr>
