working checkout button

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -60,11 +60,11 @@
       </div>
       <div id="totalbox">
         <h2>TOTAL</h2>
-        <h3 id="total">AMOUNT</h3>
+        <h3 id="total" data-quantity="0">AMOUNT</h3>
         
       </div>
       <div id="checkoutbox">
-        <form action="/create-checkout-session" method="POST">
+        <form action="/create-checkout-session" method="POST"></form>
           <button id="checkoutbutton" type="submit">CHECKOUT</button>
         </form>
       </div>
