added clear button to sub product.  Going to work on logic in serves js mode for switching between payment and subscription mode

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -38,6 +38,7 @@
           <option>Premium Package</option>
         </select>
         <button id="threebutton">Add To Cart</button>
+        <button id="clearthree">Remove Plan</button>
       <!-- <button id="threebutton" type="submit">Subscribe!</button> -->
 <!-- </form> -->
   </div>
