--- a/server/public/index.html
+++ b/server/public/index.html
@@ -30,8 +30,8 @@
     <div id="productthreebox" data-price="0">
       <h2>Test Product 3</h2>
       <h3>Choose your plan!</h3>
-      <h4>`Basic Package : $12
-    Premium Package: $19`</h4>
+      <h4>Basic Package : $12</h4>  
+      <h4>Premium Package: $19</h4>
       <!-- <form action="/checkout-page-sub" method="POST"> -->
         <select id="dropdown">  <!--dropdown.value equates to which option is chosen-->
           <option>Basic Package</option>
